# bevy-flights

./: Cargo.toml  README.md
bevy-flights-derive/: Cargo.toml
bevy-flights-derive/src/: lib.rs
examples/: circle.rs  enter.rs
src/: lib.rs  plugin.rs  timereference.rs  wrappers.rs
src/composites/: axes.rs  chaining.rs  mod.rs  scaling.rs  sums.rs
src/flights/: circle.rs  enter.rs  fixed.rs  linear.rs  mod.rs
src/tests/: circle.rs  linear.rs  mod.rs
src/timemodifiers/: mod.rs
src/traits/: mod.rs
src/trash/: mod.rs
src/variabledescriptors/: consts.rs  mod.rs  sine.rs
