[package]
name = "bevy-flights"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "a small crate for position based flights in the bevy game engine. intended for bullet hells."
repository = "https://github.com/bricout-thomas/bevy-flights"
keywords = ["bevy", "gamedev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { version = "0.10" }
bevy_ecs = { version = "0.10" }
bevy_math = { version = "0.10" }
bevy_transform = { version = "0.10" }
bevy_time = { version = "0.10" }
